--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>NSS-Modern-JavaScript-Developer-Planets</title>
 </head>
 <body>
-    
+    <div id="output">
+
+    </div>
 </body>
 </html>
